# FoundersHQ

./: .gitignore  BUILD_PROMPT.md  CLAUDE.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  Makefile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_notifications_and_financial_profile.py  003_fix_audit_logs_details.py  004_add_request_id_to_audit_logs.py  005_events_outbox.py  006_invitations_password_resets.py  007_org_profile.py  008_notification_prefs.py  009_multi_currency.py  010_insights.py
backend/app/: __init__.py  config.py  deps.py  main.py
backend/app/api/: schemas.py
backend/app/api/routers/: audit.py  auth.py  customers.py  dashboard.py  events.py  funding.py  fx.py  ingest.py  insights.py  integrations.py  invoices.py  llm.py  notifications.py  onboarding.py  org.py  runway.py  search.py  spending.py
backend/app/middleware/: request_id.py
backend/app/models/: __init__.py  audit.py  base.py  commitment.py  events_outbox.py  financial_profile.py  funding.py  fx_rate.py  insight.py  invitation.py  invoice.py  llm.py  notification.py  notification_preference.py  org.py  password_reset.py  runway.py  transaction.py  user.py
backend/app/scripts/: seed_dev_data.py
backend/app/services/audit/: __init__.py  query.py
backend/app/services/auth/: __init__.py  tokens.py
backend/app/services/dashboard/: __init__.py  health_score.py
backend/app/services/events/: __init__.py  publisher.py  sse.py  types.py
backend/app/services/funding/: __init__.py  improvements.py  retrieval.py  scoring.py  timeline.py
backend/app/services/fx/: __init__.py  conversion.py  ingest.py  rates.py
backend/app/services/ingestion/: bank_stub.py  csv_invoices.py  csv_transactions.py  fx_attach.py  questionnaire.py
backend/app/services/insights/: __init__.py  cash_drop.py  commitment_renewal.py  late_invoice.py  run_all.py  runway_change.py  vendor_spike.py
backend/app/services/invoices/: action_queue.py  alerts.py  lateness.py  parsing_ingest.py  predictions.py  risk_scoring.py
backend/app/services/llm/: explain.py  facts_payload.py  guardrails.py
backend/app/services/notifications/: __init__.py  generators.py
backend/app/services/onboarding/: __init__.py  state.py
backend/app/services/runway/: __init__.py  attribution.py  (+3 more)
backend/app/tasks/: celery_app.py  imports.py  jobs.py  parsing.py  reports.py  scraping_ingest.py
backend/app/utils/: audit.py  dates.py  errors.py  evidence.py  hashing.py  money.py  org_scope.py  pagination.py  security.py
backend/scripts/: seed_dev_data.py
backend/tests/: conftest.py  test_api_contracts.py  test_audit.py  test_audit_query.py  test_audit_router.py  test_commitments.py  test_errors.py  test_events_publisher.py  test_events_sse.py  test_events_taxonomy.py  test_events_wiring.py  test_funding_scoring.py  test_fx_conversion.py  test_fx_rates.py  test_fx_router.py  test_health_score.py  test_insight_cash_drop.py  test_insight_commitment_renewal.py  test_insight_late_invoice.py  test_insight_router.py  test_insight_run_all.py  test_insight_runway_change.py  test_insight_vendor_spike.py  test_invitations.py  test_invoice_predictions.py  test_llm_guardrails.py  test_members.py  test_metrics.py  test_notifications_dedupe.py  test_notifications_inbox.py  test_onboarding_router.py  test_onboarding_state.py  test_org_scope_invariant.py  test_password_reset.py  test_rbac.py  test_request_id.py  test_runway_forecast.py  test_search.py
(+184 files in other folders)
